Add Inertia and Create Initial Pages

--- a/package.json
+++ b/package.json
@@ -19,15 +19,22 @@
   ],
   "devDependencies": {
     "@adonisjs/assembler": "^5.9.5",
+    "@babel/core": "^7.17.0",
+    "@babel/preset-env": "^7.16.0",
     "@japa/preset-adonis": "^1.2.0",
     "@japa/runner": "^2.5.1",
+    "@symfony/webpack-encore": "4.1.1",
     "@types/proxy-addr": "^2.0.0",
     "@types/source-map-support": "^0.5.7",
     "adonis-preset-ts": "^2.1.0",
     "eslint": "^8.48.0",
     "eslint-plugin-adonis": "^2.1.1",
     "pino-pretty": "^10.2.0",
+    "postcss-loader": "^7.3.3",
+    "tailwindcss": "^3.3.3",
     "typescript": "~4.6",
+    "webpack": "^5.72",
+    "webpack-cli": "^4.9.1",
     "youch": "^3.2.3",
     "youch-terminal": "^2.2.2"
   },
@@ -38,11 +45,16 @@
     "@adonisjs/repl": "^3.1.0",
     "@adonisjs/session": "^6.2.0",
     "@adonisjs/shield": "^7.0.0",
-    "@adonisjs/view": "^6.1.0",
+    "@adonisjs/view": "^6.2.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@eidellev/inertia-adonisjs": "^8.1.0",
+    "@inertiajs/vue3": "^1.0.11",
     "luxon": "^3.4.2",
     "mysql2": "^3.6.0",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
-    "source-map-support": "^0.5.21"
+    "source-map-support": "^0.5.21",
+    "vue": "^3.3.4",
+    "vue-loader": "^17.2.2"
   }
 }
