--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,7 +39,8 @@
       "@adonisjs/shield",
       "@japa/preset-adonis/build/adonis-typings",
       "@adonisjs/lucid",
-      "@adonisjs/auth"
+      "@adonisjs/auth",
+      "@eidellev/inertia-adonisjs"
     ]
   }
 }
