Add Tailwind and FormKit

--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "@types/proxy-addr": "^2.0.0",
     "@types/source-map-support": "^0.5.7",
     "adonis-preset-ts": "^2.1.0",
+    "daisyui": "^3.6.4",
     "eslint": "^8.48.0",
     "eslint-plugin-adonis": "^2.1.1",
     "pino-pretty": "^10.2.0",
     "postcss-loader": "^7.3.3",
+    "sass": "^1.66.1",
+    "sass-loader": "^13.3.2",
     "tailwindcss": "^3.3.3",
     "typescript": "~4.6",
     "webpack": "^5.72",
@@ -48,12 +51,16 @@
     "@adonisjs/view": "^6.2.0",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@eidellev/inertia-adonisjs": "^8.1.0",
+    "@formkit/i18n": "^0.19.3",
+    "@formkit/themes": "^0.19.3",
+    "@formkit/vue": "^0.19.3",
     "@inertiajs/vue3": "^1.0.11",
     "luxon": "^3.4.2",
     "mysql2": "^3.6.0",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.21",
+    "ts-loader": "^9.4.4",
     "vue": "^3.3.4",
     "vue-loader": "^17.2.2"
   }
