--- a/MySQL/docker-compose.yml
+++ b/MySQL/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   db:
     image: mariadb:10.3
-    restart: always
+    # restart: always
     ports:
       - 3306:3306
     environment:
