--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.21",
     "ts-loader": "^9.4.4",
+    "uuid": "^9.0.0",
     "vue": "^3.3.4",
     "vue-loader": "^17.2.2"
   }
