--- a/package.json
+++ b/package.json
@@ -54,7 +54,13 @@
     "@formkit/i18n": "^0.19.3",
     "@formkit/themes": "^0.19.3",
     "@formkit/vue": "^0.19.3",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
     "@inertiajs/vue3": "^1.0.11",
+    "axios": "^1.5.0",
     "luxon": "^3.4.2",
     "mysql2": "^3.6.0",
     "pinia": "^2.1.6",
