--- a/.adonisrc.json
+++ b/.adonisrc.json
@@ -32,7 +32,8 @@
     "@adonisjs/shield",
     "@adonisjs/lucid",
     "@adonisjs/auth",
-    "@eidellev/inertia-adonisjs"
+    "@eidellev/inertia-adonisjs",
+    "adonis-lucid-soft-deletes"
   ],
   "metaFiles": [
     {
