--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "ts-loader": "^9.4.4",
     "uuid": "^9.0.0",
     "vue": "^3.3.4",
+    "vue-i18n": "9",
     "vue-loader": "^17.2.2",
     "vue3-toastify": "^0.1.12"
   }
