--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "vue": "^3.3.4",
     "vue-i18n": "9",
     "vue-loader": "^17.2.2",
+    "vue-tournament-bracket": "^2.1.4",
     "vue3-toastify": "^0.1.12"
   }
 }
