--- a/package.json
+++ b/package.json
@@ -68,12 +68,12 @@
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.21",
+    "sweetalert2": "^11.9.0",
     "ts-loader": "^9.4.4",
     "uuid": "^9.0.0",
     "vue": "^3.3.4",
     "vue-i18n": "9",
     "vue-loader": "^17.2.2",
-    "vue-tournament-bracket": "^2.1.4",
-    "vue3-toastify": "^0.1.12"
+    "vue-tournament-bracket": "^2.1.4"
   }
 }
